FIX: gap after button with dropdown options in chat did only in popup

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -758,7 +758,11 @@
   }
 
   .more-functions {
-    margin: auto 0.4em auto auto;
+    margin: auto 0 auto auto;
+
+    .popup & {
+      margin-right: 0.4em;
+    }
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       margin-right: -6px;
